--- a/app/partials/controllers/main.html
+++ b/app/partials/controllers/main.html
@@ -1,2 +1,3 @@
 <button class="btn btn-default" ng-click="main.toggleShowControl()">Control</button>
+<screen style="width: 500px; height: 500px;"></screen>
 <control ng-show="main.showControl"></control>
