Add loading data

--- a/app/partials/controllers/main.html
+++ b/app/partials/controllers/main.html
@@ -1,3 +1,9 @@
-<button class="btn btn-default" ng-click="main.toggleShowControl()">Control</button>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <form class="navbar-form">
+      <button class="btn btn-default" ng-click="main.toggleShowControl()">Control</button>
+    </form>
+  </div>
+</nav>
 <screen style="width: 500px; height: 500px;"></screen>
 <control ng-show="main.showControl"></control>
