--- a/app/partials/controllers/main.html
+++ b/app/partials/controllers/main.html
@@ -1,6 +1,9 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
-    <form class="navbar-form">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Opendap Viewer</a>
+    </div>
+    <form class="navbar-form navbar-right">
       <button class="btn btn-default" ng-click="main.toggleShowControl()">Control</button>
     </form>
   </div>
