--- a/app/styles/opendap-viewer.css
+++ b/app/styles/opendap-viewer.css
@@ -18,11 +18,26 @@ control {
   top: 90px;
   right: 15px;
 }
-#control {
+.control-container {
+  top: 0;
+  left: 0;
+  background-color: #f8f8f8;
+  padding: 8px;
+  border: solid 1px transparent;
+  border-radius: 8px 8px 8px 8px;
+  border-color: #e7e7e7;
+}
+.control-header {
+  cursor: move;
+}
+.control-header>h1 {
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+.control-contents {
   width: 200px;
   height: 500px;
-  border-radius: 8px 8px 8px 8px;
-  background-color: #ddd;
+  background-color: #fff;
 }
 screen {
   display: block;
