Fix control design

--- a/app/partials/directives/control.html
+++ b/app/partials/directives/control.html
@@ -1,6 +1,9 @@
 <div class="control-container" data-drag="true" jqyoui-draggable>
   <div class="control-header">
-    <h1>Control</h1>
+    <span class="title">Control</span>
+    <button type="button" class="close">
+      <span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
+    </button>
   </div>
   <div class="control-contents">
     <div class="container-fluid" style="padding-top: 15px; padding-bottom: 15px;">
