--- a/app/styles/opendap-viewer.css
+++ b/app/styles/opendap-viewer.css
@@ -21,23 +21,24 @@ control {
 .control-container {
   top: 0;
   left: 0;
-  background-color: #f8f8f8;
-  padding: 8px;
-  border: solid 1px transparent;
+  background-color: #e7e7e7;
+  padding: 3px;
   border-radius: 8px 8px 8px 8px;
-  border-color: #e7e7e7;
+  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
+  color: #777;
 }
 .control-header {
   cursor: move;
+  margin-left: 3px;
+  margin-bottom: 5px;
 }
-.control-header>h1 {
-  margin-top: 0;
-  margin-bottom: 10px;
+.control-header>.title{
+  font-size: 20px;
 }
 .control-contents {
   width: 200px;
   height: 500px;
-  background-color: #fff;
+  background-color: #f8f8f8;
 }
 screen {
   display: block;
