--- a/partials/directives/control.html
+++ b/partials/directives/control.html
@@ -1,5 +1,11 @@
-<div data-drag="true" jqyoui-draggable style="top:0; left:0;">
-  <div id="control">
+<div class="control-container" data-drag="true" jqyoui-draggable>
+  <div class="control-header">
+    <span class="title">Control</span>
+    <button type="button" class="close">
+      <span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
+    </button>
+  </div>
+  <div class="control-contents">
     <div class="container-fluid" style="padding-top: 15px; padding-bottom: 15px;">
       <form>
         <div class="form-group">
