Add drawing isosurface

--- a/app/partials/dialogs/isovalue.html
+++ b/app/partials/dialogs/isovalue.html
@@ -7,6 +7,10 @@
       <label>Isovalue</label>
       <input class="form-control" ng-model="isovalueCtl.isovalue">
     </div>
+    <div class="form-group">
+      <label>Color</label>
+      <input class="form-control" type="color" ng-model="isovalueCtl.color">
+    </div>
   </form>
 </div>
 <div class="modal-footer">
