--- a/partials/controllers/main.html
+++ b/partials/controllers/main.html
@@ -10,3 +10,4 @@
 </nav>
 <screen style="width: 500px; height: 500px;"></screen>
 <control ng-show="main.showControl"></control>
+<dataset-control></dataset-control>
