--- a/app/partials/directives/dataset-control.html
+++ b/app/partials/directives/dataset-control.html
@@ -1,6 +1,6 @@
 <div class="control-container" data-drag="true" jqyoui-draggable>
   <div class="control-header">
-    <span class="title">Control</span>
+    <span class="title">Dataset Control</span>
     <button type="button" class="close">
       <span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
     </button>
