--- a/app/partials/controllers/main.html
+++ b/app/partials/controllers/main.html
@@ -10,5 +10,5 @@
 </nav>
 <screen style="width: 500px; height: 500px;"></screen>
 <control ng-show="main.showControl"></control>
-<dataset-control objects="main.objects"></dataset-control>
-<object-control objects="main.objects"></object-control>
+<dataset-control></dataset-control>
+<object-control></object-control>
