--- a/partials/controllers/main.html
+++ b/partials/controllers/main.html
@@ -11,3 +11,4 @@
 <screen style="width: 500px; height: 500px;"></screen>
 <control ng-show="main.showControl"></control>
 <dataset-control></dataset-control>
+<object-control></object-control>
