--- a/app/partials/directives/control.html
+++ b/app/partials/directives/control.html
@@ -1,30 +1,23 @@
 <div class="control-container" data-drag="true" jqyoui-draggable>
   <div class="control-header">
     <span class="title">Control</span>
-    <button type="button" class="close">
+    <button type="button" class="close" ng-click="main.toggleShowControl()">
       <span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
     </button>
   </div>
   <div class="control-contents">
     <div class="container-fluid" style="padding-top: 15px; padding-bottom: 15px;">
-      <form>
-        <div class="form-group">
-          <label>Lat from</label>
-          <input class="form-control" type="number" min="-90" max="90" ng-model="ctl.latFrom"/>
-        </div>
-        <div class="form-group">
-          <label>Lat to</label>
-          <input class="form-control" type="number" min="-90" max="90" ng-model="ctl.latTo"/>
-        </div>
-        <div class="form-group">
-          <label>Lon from</label>
-          <input class="form-control" type="number" min="-180" max="180" ng-model="ctl.lonFrom"/>
-        </div>
-        <div class="form-group">
-          <label>Lon to</label>
-          <input class="form-control" type="number" min="-180" max="180" ng-model="ctl.lonTo"/>
-        </div>
-      </form>
+        <tabset justified="true">
+          <tab heading="Dataset">
+            <dataset-control></dataset-control>
+          </tab>
+          <tab heading="Camera">
+            <camera-control></camera-control>
+          </tab>
+          <tab heading="Object">
+            <object-control></object-control>
+          </tab>
+        </tabset>
     </div>
   </div>
 </div>
