--- a/styles/opendap-viewer.css
+++ b/styles/opendap-viewer.css
@@ -1,17 +1,39 @@
+.nav-tabs.nav-justified > .active > a, .nav-tabs.nav-justified > .active > a:hover, .nav-tabs.nav-justified > .active > a:focus {
+  border-bottom-color: #f8f8f8;
+}
+.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
+  background-color: #f8f8f8;
+}
+
+
 body {
   width: 100%;
   height: 100%;
   overflow: hidden;
   background-color: #777;
 }
-#frame {
+#header {
   position: absolute;
   top: 8px;
+  left: 8px;
+  right: 8px;
+  border-radius: 8px 8px 8px 8px;
+}
+#contents {
+  position: absolute;
+  top: 68px;
   left: 8px;
   bottom: 8px;
   right: 8px;
   border-radius: 8px 8px 8px 8px;
   background-color: #fff;
+}
+screen {
+  width: 100%;
+  height: 100%;
+}
+screen canvas {
+  border-radius: 8px;
 }
 .control-container {
   top: 0;
@@ -38,18 +60,12 @@ control {
   top: 90px;
   right: 15px;
 }
+control .tab-content {
+  margin-top: 20px;
+}
 control .control-contents {
-  width: 200px;
-  height: 500px;
-}
-dataset-control {
-  position: absolute;
-  top: 90px;
-  right: 240px;
-}
-dataset-control .control-contents {
-  width: 500px;
-  height: 500px;
+  width: 600px;
+  height: 600px;
 }
 .dataset {
   overflow-x: hidden;
@@ -60,15 +76,6 @@ dataset-control .control-contents {
 .dataset table {
   background-color: #fff;
   margin-bottom: 0;
-}
-object-control {
-  position: absolute;
-  top: 600px;
-  right: 15px;
-}
-object-control .control-contents {
-  width: 500px;
-  height: 300px;
 }
 screen {
   display: block;
