--- a/app/partials/directives/dataset-control.html
+++ b/app/partials/directives/dataset-control.html
@@ -19,7 +19,8 @@
             <div ng-if="data.attributes.units">units: {{data.attributes.units}}</div>
           </td>
           <td class="col-sm-3" rowspan="{{data.array.dimensions.length + 1}}">
-            <button class="btn btn-default btn-block" ng-if="data.draw.contour" ng-click="datasetCtl.drawContour(data)">Contour</button>
+            <button class="btn btn-default btn-block" ng-if="data.draw.contour2d" ng-click="datasetCtl.drawContour2D(data)">Contour</button>
+            <button class="btn btn-default btn-block" ng-if="data.draw.contour3d" ng-click="datasetCtl.drawContour3D(data)">Contour</button>
             <button class="btn btn-default btn-block" ng-if="data.draw.isosurface" ng-click="datasetCtl.drawIsosurface(data)">Isosurface</button>
             <button class="btn btn-default btn-block" ng-if="data.draw.pbr" ng-click="datasetCtl.draw(data)">PBR</button>
           </td>
