Fix scrolling dataset on iPad

--- a/app/partials/directives/control.html
+++ b/app/partials/directives/control.html
@@ -1,4 +1,4 @@
-<div class="control-container" data-drag="true" jqyoui-draggable>
+<div class="control-container" data-drag="true" jqyoui-draggable data-jqyoui-options="{handle: '.control-header'}">
   <div class="control-header">
     <span class="title">Control</span>
     <button type="button" class="close" ng-click="main.toggleShowControl()">
