--- a/partials/directives/control.html
+++ b/partials/directives/control.html
@@ -7,17 +7,17 @@
   </div>
   <div class="control-contents">
     <div class="container-fluid" style="padding-top: 15px; padding-bottom: 15px;">
-        <tabset justified="true">
-          <tab heading="Dataset">
+        <uib-tabset justified="true">
+          <uib-tab heading="Dataset">
             <dataset-control></dataset-control>
-          </tab>
-          <tab heading="Camera">
+          </uib-tab>
+          <uib-tab heading="Camera">
             <camera-control></camera-control>
-          </tab>
-          <tab heading="Object">
+          </uib-tab>
+          <uib-tab heading="Object">
             <object-control></object-control>
-          </tab>
-        </tabset>
+          </uib-tab>
+        </uib-tabset>
     </div>
   </div>
 </div>
