Change camera UI

--- a/public/partials/directives/camera-control.html
+++ b/public/partials/directives/camera-control.html
@@ -1,20 +1,12 @@
 <div>
   <form>
     <div class="form-group">
-      <label>Lat from</label>
-      <input class="form-control" type="number" min="-90" max="90" ng-model="cameraCtl.latFrom"/>
+      <label>Lat</label>
+      <input class="form-control" type="number" min="-90" max="90" ng-model="cameraCtl.latCenter"/>
     </div>
     <div class="form-group">
-      <label>Lat to</label>
-      <input class="form-control" type="number" min="-90" max="90" ng-model="cameraCtl.latTo"/>
-    </div>
-    <div class="form-group">
-      <label>Lon from</label>
-      <input class="form-control" type="number" min="-180" max="180" ng-model="cameraCtl.lonFrom"/>
-    </div>
-    <div class="form-group">
-      <label>Lon to</label>
-      <input class="form-control" type="number" min="-180" max="180" ng-model="cameraCtl.lonTo"/>
+      <label>Lon</label>
+      <input class="form-control" type="number" min="-180" max="180" ng-model="cameraCtl.lonCenter"/>
     </div>
   </form>
 </div>
