--- a/public/partials/directives/dataset-control.html
+++ b/public/partials/directives/dataset-control.html
@@ -21,8 +21,12 @@
           <td class="col-sm-3" rowspan="{{data.array.dimensions.length + 1}}">
             <button class="btn btn-default btn-block" ng-if="data.draw.contour2D" ng-click="datasetCtl.drawContour2D(data)">Contour</button>
             <button class="btn btn-default btn-block" ng-if="data.draw.contour2DT" ng-click="datasetCtl.drawContour2DT(data)">Contour</button>
-            <button class="btn btn-default btn-block" ng-if="data.draw.contour3D" ng-click="datasetCtl.drawContour3D(data)">Contour</button>
-            <button class="btn btn-default btn-block" ng-if="data.draw.contour3DT" ng-click="datasetCtl.drawContour3DT(data)">Contour</button>
+            <button class="btn btn-default btn-block" ng-if="data.draw.contour3D" ng-click="datasetCtl.drawContour3D(data, 'xy')">Contour-xy</button>
+            <button class="btn btn-default btn-block" ng-if="data.draw.contour3D" ng-click="datasetCtl.drawContour3D(data, 'xz')">Contour-xz</button>
+            <button class="btn btn-default btn-block" ng-if="data.draw.contour3D" ng-click="datasetCtl.drawContour3D(data, 'yz')">Contour-yz</button>
+            <button class="btn btn-default btn-block" ng-if="data.draw.contour3DT" ng-click="datasetCtl.drawContour3DT(data, 'xy')">Contour-xy</button>
+            <button class="btn btn-default btn-block" ng-if="data.draw.contour3DT" ng-click="datasetCtl.drawContour3DT(data, 'xz')">Contour-xz</button>
+            <button class="btn btn-default btn-block" ng-if="data.draw.contour3DT" ng-click="datasetCtl.drawContour3DT(data, 'yz')">Contour-yz</button>
             <button class="btn btn-default btn-block" ng-if="data.draw.isosurface3D" ng-click="datasetCtl.drawIsosurface3D(data)">Isosurface</button>
             <button class="btn btn-default btn-block" ng-if="data.draw.isosurface3DT" ng-click="datasetCtl.drawIsosurface3DT(data)">Isosurface</button>
           </td>
