--- a/public/partials/directives/object-control.html
+++ b/public/partials/directives/object-control.html
@@ -1,4 +1,4 @@
-<div>
+<div style="max-height: 500px; overflow-y: scroll;">
   <form>
     <div class="checkbox" ng-repeat="object in objectCtl.objects">
       <label>
