--- a/partials/dialogs/isovalue.html
+++ b/partials/dialogs/isovalue.html
@@ -11,6 +11,10 @@
       <label>Color</label>
       <input class="form-control" type="color" ng-model="isovalueCtl.color">
     </div>
+    <div class="form-group">
+      <label>Opacity</label>
+      <input class="form-control" type="number" min="0" max="1" step="0.1" ng-model="isovalueCtl.opacity">
+    </div>
   </form>
 </div>
 <div class="modal-footer">
